[Media Controls] Fix controls flicker in small size

This CL fixed control layout in small video size by
adding an estimated width of time display element which
was default to 0 when its hidden.

Bug: 911062
Change-Id: I747e465e87fd27eec1ac5ad4720fa79525443f04
Reviewed-on: https://chromium-review.googlesource.com/c/1358647
Commit-Queue: Jazz Xu <jazzhsu@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614555}