third_party/blink/renderer/modules/media_controls/elements/media_control_input_element.cc
@@ -21,7 +21,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace {
 
 // The default size of an overflow button in pixels.
-constexpr int kDefaultButtonSize = 36;
+constexpr int kDefaultButtonSize = 48;
 
 const char kOverflowContainerWithSubtitleCSSClass[] = "with-subtitle";
 const char kOverflowSubtitleCSSClass[] = "subtitle";
