third_party/blink/renderer/modules/media_controls/elements/media_control_remaining_time_display_element.cc
@@ -7,6 +7,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/modules/media_controls/media_controls_impl.h"
 
+namespace {
+
+// The during element has extra '/ ' in the text which takes approximately
+// 9 pixels.
+constexpr int kTimeDisplayExtraCharacterWidth = 9;
+
+}  // namespace
+
 namespace blink {
 
 MediaControlRemainingTimeDisplayElement::
@@ -15,6 +23,12 @@ MediaControlRemainingTimeDisplayElement::
                                      kMediaTimeRemainingDisplay) {
   SetShadowPseudoId(
       AtomicString("-webkit-media-controls-time-remaining-display"));
+}
+
+int MediaControlRemainingTimeDisplayElement::EstimateElementWidth() const {
+  // Add extra pixel width for during display since we have an extra  "/ ".
+  return kTimeDisplayExtraCharacterWidth +
+         MediaControlTimeDisplayElement::EstimateElementWidth();
 }
 
 String MediaControlRemainingTimeDisplayElement::FormatTime() const {
