third_party/blink/renderer/modules/media_controls/elements/media_control_remaining_time_display_element.h
@@ -18,6 +18,8 @@ class MediaControlRemainingTimeDisplayElement final
   explicit MediaControlRemainingTimeDisplayElement(MediaControlsImpl&);
 
  private:
+  int EstimateElementWidth() const override;
+
   String FormatTime() const override;
 };
 
